--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "myfirst-app",
+  "homepage": "https://jmasteremerald.github,io/MyLinksWebpageReact",
+  "name": "my-links-webpage",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
