animation fix for mobile

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://jmasteremerald.github,io/MyLinksWebpageReact",
-  "name": "my-links-webpage",
+  "name": "mylinks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
